--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -54,7 +54,9 @@
     <section class="panel">
       <div class="panel-title">
         <h2>내 서재</h2>
-        <button class="button secondary button--compact" id="addBookBtn" type="button">도서 추가</button>
+        <button class="button secondary button--compact" id="addBookBtn" type="button">
+          <span>도서 추가</span>
+        </button>
       </div>
       <div class="book-list" id="bookList"></div>
       <div class="empty-state hidden" id="emptyState">
@@ -67,7 +69,7 @@
 <div class="modal hidden" id="addBookModal">
   <div class="modal-content">
     <header>
-      <h3>도서 추가 📚</h3>
+      <h3>도서 추가</h3>
       <button class="icon-button" id="closeAddModalBtn">✕</button>
     </header>
     <div class="modal-body">
