feat: 홈 화면에서 사용자 닉네임 표시

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -19,6 +19,7 @@
 
 <main class="container">
   <section class="panel hidden" id="unauthenticated">
+    <h1>📚 Reading Tracker | 병렬식 독서</h1>
     <p class="unauthenticated-slogan">읽다 덮어 둔 종이책들, 어디까지 읽었는지 기억하시나요?</p>
     <a aria-label="네이버로 로그인" href="/oauth2/authorization/naver">
       <img alt="네이버 로그인" class="naver-login-img" src="/assets/naver-login-bi.svg"/>
